--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -88,7 +88,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 5px solid #ffffff;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
