--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #E5E7EB;
 }
 
 .main {
@@ -14,6 +15,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #E5E7EB;
 }
 
 .footer {
@@ -23,6 +25,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #E5E7EB;
 }
 
 .footer img {
